# ukr-pepe-bot

./: .gitignore  Cargo.toml  LICENCE  README.md  package-lock.json  package.json  serverless.yml  template.yaml
hello_world/: Cargo.toml
hello_world/src/: main.rs
rust_attempt/: Cargo.toml  serverless.yml
rust_attempt/v1_dialog_completing/: Cargo.toml
rust_attempt/v1_dialog_completing/src/: main.rs
src/handlers/messages/: main.py  proceed_conversation.py
src/handlers/send_random_message/: main.py
src/layers/main_layer/: decorators.py  gpt.py  pepe.py  tg.py  users.py
src/layers/main_layer/aws/: aws_lambda.py  dynamodb.py
tests/unit/: conftest.py  test_pepe_messages.py
v1_dialog_completing/: Cargo.toml
v1_dialog_completing/src/: main.rs
