[package]
name = "v1_dialog_completing"
version = "0.1.0"
edition = "2018"

[dependencies]
async-openai = "0.10.3"
lambda_http = { git = "https://github.com/amediantsev/aws-lambda-rust-runtime/", branch = "main", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.0"
openssl = { version = "0.10", features = ["vendored"] }
tbot = "0.6"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0.96"
